# semantic-forge

./: .gitignore  README.md  pyproject.toml  semantic-forge-starter-pack.md  semantic_forge_config.json
docs/: INTEGRATION_GUIDE.md  TOOL_REFERENCE.md  WORKFLOW_GUIDE.md
docs/adrs/proposed/: ADR-001-handler-architecture.md
docs/scratchpad/: ROADMAP.md
semantic_forge/: __init__.py  __main__.py  cogsec.py  concepts.py  config.py  data_models.py  dataset.py  handlers.py  integrations.py  llm.py  main.py  mcp.py  utils.py
tests/: __init__.py  test_cogsec.py  test_concepts.py  test_dataset.py  test_handlers.py  test_integrations.py  test_main.py
